Fix product build after "8132168: Support IdealGraphVisualizer in optimized build"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • 9
    • b92

        After "8132168: Support IdealGraphVisualizer in optimized build" the product build is broken:
        compilerDirectives.cpp:181: error: 'PrintIdealGraphLevel' was not declared in this scope

        8132168 changes the flag from 'develop' to 'notproduct'. 'Notproduct' does not define
        "const intx PrintIdealGraphLevel = 0;" in the product build, as 'develop' did.
        http://hg.openjdk.java.net/jdk9/hs-comp/hotspot/rev/1cd251540653

              Assignee:
              Goetz Lindenmaier
              Reporter:
              Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: