8140239: Fix product build after "8132168: Support IdealGraphVisualizer in optimized build"

Reviewed-by: vlivanov